
  * GCC snapshot, taken from the trunk (20200116, f7dff7699fd).
  * Update gm2 from the gm2 trunk.

  [ Matthias Klose ]
  * Update libgomp symbols files.
  * Build-depend on libzstd-dev.
  * Revert the fix for PR c/85678, not making -fno-common the default for
    current releases and backports.
  * Update libstdc++ symbols file.
  * Install more AArch64 intrinsic headers.

  [YunQiang Su]
  * Fix buffer overflow in the gcc-search-prefixed-as-ld patch when
    strlen(DEFAULT_REAL_TARGET_MACHINE) < multiarch_len. Addresses: #915194.

 -- Matthias Klose <doko@debian.org>  Thu, 16 Jan 2020 11:56:07 +0100

gcc-10 (10-20200104-1) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20200104, r279880).
  * Update newlib to newlib-3.2.0.
  * Update gm2 from the gm2 trunk.

 -- Matthias Klose <doko@debian.org>  Sat, 04 Jan 2020 11:26:06 +0100

gcc-10 (10-20191217-1) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20191217, r279456).
  * Update newlib to a snapshot from trunk.
  * Update gm2 from the gm2 trunk.
  * Update symbols files.
  * Build without gnat for a first build.
  * Build an amdgcn offload compiler.
  * Update debian/copyright for gm2, compiler is now GPL-3+, the runtime
    libraries GPL-3+ plus GCC Runtime Library Exception, version 3.1.
  * Fix libgo build on arm-linux-gnueabi*.
  * Update debian/copyright for contrib/unicode.
  * libgomp-plugin-nvptx1: Update cuda suggestions. Addresses: #946487.
  * Fix buffer overflow in the gcc-search-prefixed-as-ld patch.
    Addresses: #946792.
  * Don't strip frontends for debugging purposes.

 -- Matthias Klose <doko@debian.org>  Tue, 17 Dec 2019 12:31:04 +0100

gcc-9 (9.2.1-21) unstable; urgency=medium

  * Update to SVN 20191130 (r278870) from the gcc-9-branch.
    - Fix PR fortran/92100, PR tree-optimization/92222, PR ada/92489,
      PR fortran/92629.
  * Stop building -dbg packages, keep building the libstc++6-9-dbg package