@@ -1,0 +1,7 @@
+# DP: updates from the 10 branch upto 2020xxxx (documentation).
+
+LANG=C git diff --no-renames --src-prefix=a/src/ --dst-prefix=b/src/ \
+        a0c06cc27d2146b7d86758ffa236516c6143d62c 26b2838fc9b3f78267eb2805e4f93f31d4649c63 \
+	| awk '/^diff .*\.texi/ {skip=0; print; next} /^diff / {skip=1; next} skip==0' \
+        | grep -v -E '^(diff|index)'
+
