@@ -1,14 +1,0 @@
-# DP: updates from the 9 branch upto 20191127 (r278756).
-
-last_update()
-{
-	cat > ${dir}LAST_UPDATED <EOF
-Wed Nov 27 07:53:15 CET 2019
-Wed Nov 27 06:53:15 UTC 2019 (revision 278756)
-EOF
-}
-
-LANG=C svn diff svn://gcc.gnu.org/svn/gcc/tags/gcc_9_2_0_release svn://gcc.gnu.org/svn/gcc/branches/gcc-9-branch \
-	| sed -r 's,^--- (\S+)\t(\S+)(.*)$,--- a/src/\1\t\2,;s,^\+\+\+ (\S+)\t(\S+)(.*)$,+++ b/src/\1\t\2,' \
-	| awk '/^Index:.*\.(class|texi)/ {skip=1; next} /^Index:/ { skip=0 } skip==0'
-
