@@ -10,6 +10,7 @@ gcc-10 (10-20200116-1) experimental; urgency=medium
     current releases and backports.
   * Update libstdc++ symbols file.
   * Install more AArch64 intrinsic headers.
+  * Prepare for git updates from a release branch.
 
   [YunQiang Su]
   * Fix buffer overflow in the gcc-search-prefixed-as-ld patch when
